--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id = 'container'></div>
-    <script type='text/javascript' src="application_finished.js"></script>
+    <script type='text/javascript' src="application.js"></script>
 </body>
 </html>
